@@ -1,0 +1,26 @@
+<?php
+
+/**
+* $Id: main.php,v 1.1 2007/06/05 18:45:06 marcan Exp $
+* Module: NotFound
+* Author: The SmartFactory <www.smartfactory.ca>
+* Licence: GNU
+*/
+
+define("_NOTFOUND_404_PAGE_TITLE","404 Error - Document not Found");
+define("_NOTFOUND_404_TITLE","File not found");
+define("_NOTFOUND_404_TEXT","The file you requested could not be found on <b>%s</b>. If you typed the URL manually, please note that addresses are case-sensitive and may contain special characters such as #, /, & etc. If you still cannot reach the page you are looking for, the following options may help:");
+define("_NOTFOUND_SEARCH","Search");
+define("_NOTFOUND_SEARCH_OUR_SITE","Search our site:");
+define("_NOTFOUND_ADVANCED_SEARCH","Advanced Search");
+define("_NOTFOUND_START_AGAIN","Start again from the <a href='" . XOOPS_URL . "'>home page</a>.");
+define("_NOTFOUND_CONTACT","Contact the <a href='mailto:%s'>webmaster</a> to report this error.");
+
+
+define("_NOTFOUND_500_PAGE_TITLE","Error 500 - Internal Server Error");
+define("_NOTFOUND_500_TITLE","Internal Server Error");
+define("_NOTFOUND_500_TEXT","The server of %s encountered an internal or misconfiguration and was unable to complete your request.");
+define("_NOTFOUND_500_CONTACT","Please <a href='mailto:%s'>contact us</a> to report this error and the time it occured. In addition, please report any information that could help us fix this situation.");
+
+
+?>
