@@ -1,0 +1,6 @@
+<div style="display: none;"><{$ref_smartfactory}></div>
+
+<div id="notfound_title"><{$smarty.const._NOTFOUND_500_TITLE}></div>
+<div id="notfound_text"><{$not_found_text}></div>
+<div id="notfound_text"><{$smarty.const._NOTFOUND_500_CONTACT}></div>
+
