@@ -16,6 +16,7 @@ Unreleased: Version 0.1
 - Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
 - Added : Configuration options to turn on or off and configure the Multilanguage on the site (malanciault)
 - Added : Integrating some flags image to be used by the multilanguage feature (malanicault)
+- Added : Handling 404 and 500 pages automatically on the site (malanciault)
 
 - Improved: When the User registration is Off... all links to register.php are not shown.
 
